tests/baselines/reference/classWithOverloadImplementationOfWrongName.errors.txt
==== tests/cases/compiler/classWithOverloadImplementationOfWrongName.ts (1 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        bar(x): any { }
        ~~~
!!! error TS1043: Function overload name must be 'foo'.
    }